--- a/ConferenceRegistrationSolution/ConferenceRegistrationApi/appsettings.Development.json
+++ b/ConferenceRegistrationSolution/ConferenceRegistrationApi/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "markupApi":  "http://localhost:1338/"
+  "markupApi": "http://localhost:1338/",
+  "ProductsSection": {
+    "ConnectionString": "mongodb://admin:TokyoJoe138!@localhost:27017/",
+    "DatabaseName": "products_db",
+    "CollectionName": "products"
+  }
+
+
 }
