--- a/ConferenceRegistrationSolution/ConferenceRegistrationApi/ConferenceRegistrationApi.csproj
+++ b/ConferenceRegistrationSolution/ConferenceRegistrationApi/ConferenceRegistrationApi.csproj
@@ -7,9 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapr.AspNetCore" Version="1.6.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.44.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Proto\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\..\schemata\conferenceReservationRequest.proto" GrpcServices="Server">
+      <Link>Protos\conferenceReservationRequest.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
